# cf-log

./: CMakeLists.txt  README.md  version.txt
CMake/: ConfigureMsvc3rdParty.cmake  FindGLEW.cmake  FindGeographicLib.cmake  FindSimGear.cmake
build.x64/: .gitignore  build-me.bat  fi.bat  run-raw.bat
src/: cf-log.cxx  cf-log.hxx  cf-pilot.cxx  cf-pilot.hxx  cf-server.cxx  cf-server.hxx  mpMsgs.hxx  raw-log.cxx  tiny_xdr.hxx
src/cf_lib/: SGMath2.hxx  cf_euler.cxx  cf_euler.hxx  cf_misc.cxx  cf_misc.hxx  cf_postgres.cxx  cf_postgres.hxx  cf_sqlite.cxx  cf_sqlite.hxx  daemon.cxx  daemon.hxx  fg_geometry.cxx  fg_geometry.hxx  geod.cxx  geod.hxx  logstream.hxx  mpKeyboard.cxx  mpKeyboard.hxx  mpMsgs.hxx  netSocket.cxx  netSocket.h  sprtf.cxx  sprtf.hxx  strptime_win.cxx  test_data.cxx  test_data.hxx  tiny_xdr.hxx  win_strptime.cxx
src/mongoose/: mongoose.c
